[gd_scene load_steps=3 format=3 uid="uid://cyaytq4iew6k3"]

[ext_resource type="Script" uid="uid://djftlpkmwsu60" path="res://UI/score_board.gd" id="1_le08a"]
[ext_resource type="Texture2D" uid="uid://yherf0oro2rr" path="res://UI/PNG/imagen_menu2.png" id="2_ckdub"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_le08a")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ckdub")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 256
theme_override_constants/margin_top = 256
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 256

[node name="ScoresList" type="VBoxContainer" parent="MarginContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "UNA ÃšLTIMA"

[node name="Button2" type="Button" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "INICIO
"

[connection signal="pressed" from="MarginContainer2/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer2/HBoxContainer/Button2" to="." method="_on_button2_pressed"]
